--- a/sheridan.org
+++ b/sheridan.org
@@ -10,3 +10,10 @@ They still are polling from Sheridan Big Spring so
 I don't know if I should stop or not??
 
 
+
+
+* TODO Bill for Alcorn Skid 
+  DEADLINE: <2018-06-28 Thu>
++ Alcorn A 1-5 Skid 4
++ First day June 4 (I think)
++ Last day June 27
