--- a/calendar.org
+++ b/calendar.org
@@ -1,471 +1,3 @@
-* Onping Overview and Walkthrough
-  :PROPERTIES:
-  :LOCATION: https://zoom.us/j/336244511
-  :LINK: [[https://www.google.com/calendar/event?eid=N2lmaWxyNjBjdGVrdnJvb2ExdHZyNzA3bzQgc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
-  :ID: 7ifilr60ctekvrooa1tvr707o4
-  :END:
-
-  <2018-05-30 Wed 14:00-15:00>
-
-Hi there, 
-
-Scott Murphy is inviting you to a scheduled Zoom meeting. 
-
-Join from PC, Mac, Linux, iOS or Android: https://zoom.us/j/336244511
-
-Or iPhone one-tap :
-    US: +16465588665,,336244511#  or +14086380986,,336244511# 
-Or Telephone:
-    Dial(for higher quality, dial a number based on your current location): 
-        US: +1 646 558 8665  or +1 408 638 0986 
-    Meeting ID: 336 244 511
-    International numbers available: https://zoom.us/u/bIkfQyaS
-* Onping Overview and Walkthrough
-  :PROPERTIES:
-  :LOCATION: https://zoom.us/j/336244511
-  :LINK: [[https://www.google.com/calendar/event?eid=YzQ0dTZmbGQzdTZudDlkMTk3NWpyMDNsdWsgc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
-  :ID: c44u6fld3u6nt9d1975jr03luk
-  :END:
-
-  <2018-05-30 Wed 14:00-15:00>
-
-Hi there, 
-
-Scott Murphy is inviting you to a scheduled Zoom meeting. 
-
-Join from PC, Mac, Linux, iOS or Android: https://zoom.us/j/336244511
-
-Or iPhone one-tap :
-    US: +16465588665,,336244511#  or +14086380986,,336244511# 
-Or Telephone:
-    Dial(for higher quality, dial a number based on your current location): 
-        US: +1 646 558 8665  or +1 408 638 0986 
-    Meeting ID: 336 244 511
-    International numbers available: https://zoom.us/u/bIkfQyaS
-* Onping Overview and Walkthrough
-  :PROPERTIES:
-  :LOCATION: https://zoom.us/j/336244511
-  :LINK: [[https://www.google.com/calendar/event?eid=cDd2dGw0NWtkdW1kdDRxaTJzMDZ2OXEzNmMgc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
-  :ID: p7vtl45kdumdt4qi2s06v9q36c
-  :END:
-
-  <2018-05-30 Wed 14:00-15:00>
-
-Hi there, 
-
-Scott Murphy is inviting you to a scheduled Zoom meeting. 
-
-Join from PC, Mac, Linux, iOS or Android: https://zoom.us/j/336244511
-
-Or iPhone one-tap :
-    US: +16465588665,,336244511#  or +14086380986,,336244511# 
-Or Telephone:
-    Dial(for higher quality, dial a number based on your current location): 
-        US: +1 646 558 8665  or +1 408 638 0986 
-    Meeting ID: 336 244 511
-    International numbers available: https://zoom.us/u/bIkfQyaS
-* Onping Overview and Walkthrough
-  :PROPERTIES:
-  :LOCATION: https://zoom.us/j/336244511
-  :LINK: [[https://www.google.com/calendar/event?eid=dDBhNGszYjMwajRxMGl1cXMzZGFodDZlMjAgc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
-  :ID: t0a4k3b30j4q0iuqs3daht6e20
-  :END:
-
-  <2018-05-30 Wed 14:00-15:00>
-
-Hi there, 
-
-Scott Murphy is inviting you to a scheduled Zoom meeting. 
-
-Join from PC, Mac, Linux, iOS or Android: https://zoom.us/j/336244511
-
-Or iPhone one-tap :
-    US: +16465588665,,336244511#  or +14086380986,,336244511# 
-Or Telephone:
-    Dial(for higher quality, dial a number based on your current location): 
-        US: +1 646 558 8665  or +1 408 638 0986 
-    Meeting ID: 336 244 511
-    International numbers available: https://zoom.us/u/bIkfQyaS
-* Plow Field Service Meeting
-  :PROPERTIES:
-  :LOCATION: https://zoom.us/j/344736287
-  :LINK: [[https://www.google.com/calendar/event?eid=djlpaGM2dnNzbmNtOHRjdjM0MmgxOGhpMm9fMjAxODA1MzFUMTMwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: v9ihc6vssncm8tcv342h18hi2o_20180531T130000Z
-  :END:
-
-  <2018-05-31 Thu 08:00-09:00>
-
-Hi there, 
-
-Scott Murphy is inviting you to a scheduled Zoom meeting. 
-
-Join from PC, Mac, Linux, iOS or Android: https://zoom.us/j/344736287
-
-Or iPhone one-tap :
-    US: +16465588665,,344736287#  or +14086380986,,344736287# 
-Or Telephone:
-    Dial(for higher quality, dial a number based on your current location): 
-        US: +1 646 558 8665  or +1 408 638 0986 
-    Meeting ID: 344 736 287
-    International numbers available: https://zoom.us/u/cuKwVAHVC
-* Onping Overview and Walkthrough
-  :PROPERTIES:
-  :LOCATION: https://zoom.us/j/336244511
-  :LINK: [[https://www.google.com/calendar/event?eid=ZTB0djQyZTlsdW0yNHBwODMzNnJzcTh1ZGMgc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
-  :ID: e0tv42e9lum24pp8336rsq8udc
-  :END:
-
-  <2018-05-31 Thu 15:30-16:30>
-
-Hi there, 
-
-Scott Murphy is inviting you to a scheduled Zoom meeting. 
-
-Join from PC, Mac, Linux, iOS or Android: https://zoom.us/j/336244511
-
-Or iPhone one-tap :
-    US: +16465588665,,336244511#  or +14086380986,,336244511# 
-Or Telephone:
-    Dial(for higher quality, dial a number based on your current location): 
-        US: +1 646 558 8665  or +1 408 638 0986 
-    Meeting ID: 336 244 511
-    International numbers available: https://zoom.us/u/bIkfQyaS
-* Onping Overview and Walkthrough
-  :PROPERTIES:
-  :LOCATION: https://zoom.us/j/336244511
-  :LINK: [[https://www.google.com/calendar/event?eid=bWYwYmt2dG1rZGlxZ3RiYWVsOG4zZmkzZTAgc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
-  :ID: mf0bkvtmkdiqgtbael8n3fi3e0
-  :END:
-
-  <2018-05-31 Thu 15:30-16:30>
-
-Hi there, 
-
-Scott Murphy is inviting you to a scheduled Zoom meeting. 
-
-Join from PC, Mac, Linux, iOS or Android: https://zoom.us/j/336244511
-
-Or iPhone one-tap :
-    US: +16465588665,,336244511#  or +14086380986,,336244511# 
-Or Telephone:
-    Dial(for higher quality, dial a number based on your current location): 
-        US: +1 646 558 8665  or +1 408 638 0986 
-    Meeting ID: 336 244 511
-    International numbers available: https://zoom.us/u/bIkfQyaS
-* Plow Field Service Meeting
-  :PROPERTIES:
-  :LOCATION: https://zoom.us/j/344736287
-  :LINK: [[https://www.google.com/calendar/event?eid=djlpaGM2dnNzbmNtOHRjdjM0MmgxOGhpMm9fMjAxODA2MDFUMTMwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: v9ihc6vssncm8tcv342h18hi2o_20180601T130000Z
-  :END:
-
-  <2018-06-01 Fri 08:00-09:00>
-
-Hi there, 
-
-Scott Murphy is inviting you to a scheduled Zoom meeting. 
-
-Join from PC, Mac, Linux, iOS or Android: https://zoom.us/j/344736287
-
-Or iPhone one-tap :
-    US: +16465588665,,344736287#  or +14086380986,,344736287# 
-Or Telephone:
-    Dial(for higher quality, dial a number based on your current location): 
-        US: +1 646 558 8665  or +1 408 638 0986 
-    Meeting ID: 344 736 287
-    International numbers available: https://zoom.us/u/cuKwVAHVC
-* Marketing strategy and review
-  :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=bWtzMWxycjh0ZHZtOTA1Ym5nOWc4djRuZW9fMjAxODA2MDFUMTYwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: mks1lrr8tdvm905bng9g8v4neo_20180601T160000Z
-  :END:
-
-  <2018-06-01 Fri 11:00-12:00>
-* Plow Field Service Meeting
-  :PROPERTIES:
-  :LOCATION: https://zoom.us/j/344736287
-  :LINK: [[https://www.google.com/calendar/event?eid=djlpaGM2dnNzbmNtOHRjdjM0MmgxOGhpMm9fMjAxODA2MDJUMTMwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: v9ihc6vssncm8tcv342h18hi2o_20180602T130000Z
-  :END:
-
-  <2018-06-02 Sat 08:00-09:00>
-
-Hi there, 
-
-Scott Murphy is inviting you to a scheduled Zoom meeting. 
-
-Join from PC, Mac, Linux, iOS or Android: https://zoom.us/j/344736287
-
-Or iPhone one-tap :
-    US: +16465588665,,344736287#  or +14086380986,,344736287# 
-Or Telephone:
-    Dial(for higher quality, dial a number based on your current location): 
-        US: +1 646 558 8665  or +1 408 638 0986 
-    Meeting ID: 344 736 287
-    International numbers available: https://zoom.us/u/cuKwVAHVC
-* Plow Field Service Meeting
-  :PROPERTIES:
-  :LOCATION: https://zoom.us/j/344736287
-  :LINK: [[https://www.google.com/calendar/event?eid=djlpaGM2dnNzbmNtOHRjdjM0MmgxOGhpMm9fMjAxODA2MDNUMTMwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: v9ihc6vssncm8tcv342h18hi2o_20180603T130000Z
-  :END:
-
-  <2018-06-03 Sun 08:00-09:00>
-
-Hi there, 
-
-Scott Murphy is inviting you to a scheduled Zoom meeting. 
-
-Join from PC, Mac, Linux, iOS or Android: https://zoom.us/j/344736287
-
-Or iPhone one-tap :
-    US: +16465588665,,344736287#  or +14086380986,,344736287# 
-Or Telephone:
-    Dial(for higher quality, dial a number based on your current location): 
-        US: +1 646 558 8665  or +1 408 638 0986 
-    Meeting ID: 344 736 287
-    International numbers available: https://zoom.us/u/cuKwVAHVC
-* Plow Field Service Meeting
-  :PROPERTIES:
-  :LOCATION: https://zoom.us/j/344736287
-  :LINK: [[https://www.google.com/calendar/event?eid=djlpaGM2dnNzbmNtOHRjdjM0MmgxOGhpMm9fMjAxODA2MDRUMTMwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: v9ihc6vssncm8tcv342h18hi2o_20180604T130000Z
-  :END:
-
-  <2018-06-04 Mon 08:00-09:00>
-
-Hi there, 
-
-Scott Murphy is inviting you to a scheduled Zoom meeting. 
-
-Join from PC, Mac, Linux, iOS or Android: https://zoom.us/j/344736287
-
-Or iPhone one-tap :
-    US: +16465588665,,344736287#  or +14086380986,,344736287# 
-Or Telephone:
-    Dial(for higher quality, dial a number based on your current location): 
-        US: +1 646 558 8665  or +1 408 638 0986 
-    Meeting ID: 344 736 287
-    International numbers available: https://zoom.us/u/cuKwVAHVC
-* Plow Field Service Meeting
-  :PROPERTIES:
-  :LOCATION: https://zoom.us/j/344736287
-  :LINK: [[https://www.google.com/calendar/event?eid=djlpaGM2dnNzbmNtOHRjdjM0MmgxOGhpMm9fMjAxODA2MDVUMTMwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: v9ihc6vssncm8tcv342h18hi2o_20180605T130000Z
-  :END:
-
-  <2018-06-05 Tue 08:00-09:00>
-
-Hi there, 
-
-Scott Murphy is inviting you to a scheduled Zoom meeting. 
-
-Join from PC, Mac, Linux, iOS or Android: https://zoom.us/j/344736287
-
-Or iPhone one-tap :
-    US: +16465588665,,344736287#  or +14086380986,,344736287# 
-Or Telephone:
-    Dial(for higher quality, dial a number based on your current location): 
-        US: +1 646 558 8665  or +1 408 638 0986 
-    Meeting ID: 344 736 287
-    International numbers available: https://zoom.us/u/cuKwVAHVC
-* Plow Field Service Meeting
-  :PROPERTIES:
-  :LOCATION: https://zoom.us/j/344736287
-  :LINK: [[https://www.google.com/calendar/event?eid=djlpaGM2dnNzbmNtOHRjdjM0MmgxOGhpMm9fMjAxODA2MDZUMTMwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: v9ihc6vssncm8tcv342h18hi2o_20180606T130000Z
-  :END:
-
-  <2018-06-06 Wed 08:00-09:00>
-
-Hi there, 
-
-Scott Murphy is inviting you to a scheduled Zoom meeting. 
-
-Join from PC, Mac, Linux, iOS or Android: https://zoom.us/j/344736287
-
-Or iPhone one-tap :
-    US: +16465588665,,344736287#  or +14086380986,,344736287# 
-Or Telephone:
-    Dial(for higher quality, dial a number based on your current location): 
-        US: +1 646 558 8665  or +1 408 638 0986 
-    Meeting ID: 344 736 287
-    International numbers available: https://zoom.us/u/cuKwVAHVC
-* Logan gone
-  :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=NWMzbGhmdTcwY3VocHMxYmkwYmRlMDI0cGMgc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
-  :ID: 5c3lhfu70cuhps1bi0bde024pc
-  :END:
-
-  <2018-06-06 Wed 20:00>--<2018-06-12 Tue 18:40>
-* Plow Field Service Meeting
-  :PROPERTIES:
-  :LOCATION: https://zoom.us/j/344736287
-  :LINK: [[https://www.google.com/calendar/event?eid=djlpaGM2dnNzbmNtOHRjdjM0MmgxOGhpMm9fMjAxODA2MDdUMTMwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: v9ihc6vssncm8tcv342h18hi2o_20180607T130000Z
-  :END:
-
-  <2018-06-07 Thu 08:00-09:00>
-
-Hi there, 
-
-Scott Murphy is inviting you to a scheduled Zoom meeting. 
-
-Join from PC, Mac, Linux, iOS or Android: https://zoom.us/j/344736287
-
-Or iPhone one-tap :
-    US: +16465588665,,344736287#  or +14086380986,,344736287# 
-Or Telephone:
-    Dial(for higher quality, dial a number based on your current location): 
-        US: +1 646 558 8665  or +1 408 638 0986 
-    Meeting ID: 344 736 287
-    International numbers available: https://zoom.us/u/cuKwVAHVC
-* Daniel Talking
-  :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=NzNrNTEzbnNmaDJydmNkNmtoYjQzNGRscnEgc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
-  :ID: 73k513nsfh2rvcd6khb434dlrq
-  :END:
-
-  <2018-06-07 Thu 10:30-11:30>
-* Plow Field Service Meeting
-  :PROPERTIES:
-  :LOCATION: https://zoom.us/j/344736287
-  :LINK: [[https://www.google.com/calendar/event?eid=djlpaGM2dnNzbmNtOHRjdjM0MmgxOGhpMm9fMjAxODA2MDhUMTMwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: v9ihc6vssncm8tcv342h18hi2o_20180608T130000Z
-  :END:
-
-  <2018-06-08 Fri 08:00-09:00>
-
-Hi there, 
-
-Scott Murphy is inviting you to a scheduled Zoom meeting. 
-
-Join from PC, Mac, Linux, iOS or Android: https://zoom.us/j/344736287
-
-Or iPhone one-tap :
-    US: +16465588665,,344736287#  or +14086380986,,344736287# 
-Or Telephone:
-    Dial(for higher quality, dial a number based on your current location): 
-        US: +1 646 558 8665  or +1 408 638 0986 
-    Meeting ID: 344 736 287
-    International numbers available: https://zoom.us/u/cuKwVAHVC
-* Plow Field Service Meeting
-  :PROPERTIES:
-  :LOCATION: https://zoom.us/j/344736287
-  :LINK: [[https://www.google.com/calendar/event?eid=djlpaGM2dnNzbmNtOHRjdjM0MmgxOGhpMm9fMjAxODA2MDlUMTMwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: v9ihc6vssncm8tcv342h18hi2o_20180609T130000Z
-  :END:
-
-  <2018-06-09 Sat 08:00-09:00>
-
-Hi there, 
-
-Scott Murphy is inviting you to a scheduled Zoom meeting. 
-
-Join from PC, Mac, Linux, iOS or Android: https://zoom.us/j/344736287
-
-Or iPhone one-tap :
-    US: +16465588665,,344736287#  or +14086380986,,344736287# 
-Or Telephone:
-    Dial(for higher quality, dial a number based on your current location): 
-        US: +1 646 558 8665  or +1 408 638 0986 
-    Meeting ID: 344 736 287
-    International numbers available: https://zoom.us/u/cuKwVAHVC
-* Charity
-  :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=Mzh0cTEwaThhNzI3cmxxNWxxcXJyYmpvaG9fMjAxODA2MTAgc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
-  :ID: 38tq10i8a727rlq5lqqrrbjoho_20180610
-  :END:
-
-  <2018-06-10 Sun>
-* Plow Field Service Meeting
-  :PROPERTIES:
-  :LOCATION: https://zoom.us/j/344736287
-  :LINK: [[https://www.google.com/calendar/event?eid=djlpaGM2dnNzbmNtOHRjdjM0MmgxOGhpMm9fMjAxODA2MTBUMTMwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: v9ihc6vssncm8tcv342h18hi2o_20180610T130000Z
-  :END:
-
-  <2018-06-10 Sun 08:00-09:00>
-
-Hi there, 
-
-Scott Murphy is inviting you to a scheduled Zoom meeting. 
-
-Join from PC, Mac, Linux, iOS or Android: https://zoom.us/j/344736287
-
-Or iPhone one-tap :
-    US: +16465588665,,344736287#  or +14086380986,,344736287# 
-Or Telephone:
-    Dial(for higher quality, dial a number based on your current location): 
-        US: +1 646 558 8665  or +1 408 638 0986 
-    Meeting ID: 344 736 287
-    International numbers available: https://zoom.us/u/cuKwVAHVC
-* Plow Field Service Meeting
-  :PROPERTIES:
-  :LOCATION: https://zoom.us/j/344736287
-  :LINK: [[https://www.google.com/calendar/event?eid=djlpaGM2dnNzbmNtOHRjdjM0MmgxOGhpMm9fMjAxODA2MTFUMTMwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: v9ihc6vssncm8tcv342h18hi2o_20180611T130000Z
-  :END:
-
-  <2018-06-11 Mon 08:00-09:00>
-
-Hi there, 
-
-Scott Murphy is inviting you to a scheduled Zoom meeting. 
-
-Join from PC, Mac, Linux, iOS or Android: https://zoom.us/j/344736287
-
-Or iPhone one-tap :
-    US: +16465588665,,344736287#  or +14086380986,,344736287# 
-Or Telephone:
-    Dial(for higher quality, dial a number based on your current location): 
-        US: +1 646 558 8665  or +1 408 638 0986 
-    Meeting ID: 344 736 287
-    International numbers available: https://zoom.us/u/cuKwVAHVC
-* Plow Field Service Meeting
-  :PROPERTIES:
-  :LOCATION: https://zoom.us/j/344736287
-  :LINK: [[https://www.google.com/calendar/event?eid=djlpaGM2dnNzbmNtOHRjdjM0MmgxOGhpMm9fMjAxODA2MTJUMTMwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: v9ihc6vssncm8tcv342h18hi2o_20180612T130000Z
-  :END:
-
-  <2018-06-12 Tue 08:00-09:00>
-
-Hi there, 
-
-Scott Murphy is inviting you to a scheduled Zoom meeting. 
-
-Join from PC, Mac, Linux, iOS or Android: https://zoom.us/j/344736287
-
-Or iPhone one-tap :
-    US: +16465588665,,344736287#  or +14086380986,,344736287# 
-Or Telephone:
-    Dial(for higher quality, dial a number based on your current location): 
-        US: +1 646 558 8665  or +1 408 638 0986 
-    Meeting ID: 344 736 287
-    International numbers available: https://zoom.us/u/cuKwVAHVC
-* Plow Field Service Meeting
-  :PROPERTIES:
-  :LOCATION: https://zoom.us/j/344736287
-  :LINK: [[https://www.google.com/calendar/event?eid=djlpaGM2dnNzbmNtOHRjdjM0MmgxOGhpMm9fMjAxODA2MTNUMTMwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: v9ihc6vssncm8tcv342h18hi2o_20180613T130000Z
-  :END:
-
-  <2018-06-13 Wed 08:00-09:00>
-
-Hi there, 
-
-Scott Murphy is inviting you to a scheduled Zoom meeting. 
-
-Join from PC, Mac, Linux, iOS or Android: https://zoom.us/j/344736287
-
-Or iPhone one-tap :
-    US: +16465588665,,344736287#  or +14086380986,,344736287# 
-Or Telephone:
-    Dial(for higher quality, dial a number based on your current location): 
-        US: +1 646 558 8665  or +1 408 638 0986 
-    Meeting ID: 344 736 287
-    International numbers available: https://zoom.us/u/cuKwVAHVC
 * Plow Field Service Meeting
   :PROPERTIES:
   :LOCATION: https://zoom.us/j/344736287
@@ -707,6 +239,32 @@ This event was created from an email you received in Gmail. https://mail.google.
   :END:
 
   <2018-07-13 Fri 11:00-12:00>
+* Tim dysinger
+  :PROPERTIES:
+  :LINK: [[https://www.google.com/calendar/event?eid=dHNicHBwa3ZvZThsNnU4aXNuN2MzN2F1MWsgc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
+  :ID: tsbpppkvoe8l6u8isn7c37au1k
+  :END:
+
+  <2018-07-13 Fri 16:00-17:00>
+* Design Meeting
+  :PROPERTIES:
+  :LINK: [[https://www.google.com/calendar/event?eid=MHNkdGhta2ZhcG52Y2lxYWNtcHBmdW9zYXMgc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
+  :ID: 0sdthmkfapnvciqacmppfuosas
+  :END:
+
+  <2018-07-17 Tue>
+* OKC.js July (Topic TBA)
+  :PROPERTIES:
+  :LOCATION: StarSpace46, 1141 W Sheridan Ave, Oklahoma City, OK, us, 73106
+  :LINK: [[https://www.google.com/calendar/event?eid=XzZ0bG5hcXJsZTVwNmNwYjRkaG1qNHBocGVncG1tZGpqZTVqbWdwcGc2aHA3YXJyOWNkazZhcmI4NjFtNmVzajk2bHBuNm9iMWVvcG1tdDNjZWhobjZzYjZjcG0zMHE5ajY1bDdhcmozZWdwNmUgc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
+  :ID: _6tlnaqrle5p6cpb4dhmj4phpegpmmdjje5jmgppg6hp7arr9cdk6arb861m6esj96lpn6ob1eopmmt3cehhn6sb6cpm30q9j65l7arj3egp6e
+  :END:
+
+  <2018-07-17 Tue 11:30-12:30>
+
+To see detailed information for automatically created events like this one, use the official Google Calendar app. https://g.co/calendar
+
+This event was created from an email you received in Gmail. https://mail.google.com/mail?extsrc=cal&plid=ACUX6DMXXe7DM8GgFeHFA_D7gC16GvXuqlukELU
 * Marketing strategy and review
   :PROPERTIES:
   :LINK: [[https://www.google.com/calendar/event?eid=bWtzMWxycjh0ZHZtOTA1Ym5nOWc4djRuZW9fMjAxODA3MjdUMTYwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
@@ -721,6 +279,13 @@ This event was created from an email you received in Gmail. https://mail.google.
   :END:
 
   <2018-07-30 Mon 14:00-15:00>
+* Camino Meeting 
+  :PROPERTIES:
+  :LINK: [[https://www.google.com/calendar/event?eid=Mm1uc25pcWkxcjJtcmMyOThuOWtjMmxqNWggc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
+  :ID: 2mnsniqi1r2mrc298n9kc2lj5h
+  :END:
+
+  <2018-08-06 Mon 09:00-11:00>
 * Marketing strategy and review
   :PROPERTIES:
   :LINK: [[https://www.google.com/calendar/event?eid=bWtzMWxycjh0ZHZtOTA1Ym5nOWc4djRuZW9fMjAxODA4MTBUMTYwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
@@ -757,3 +322,31 @@ This event was created from an email you received in Gmail. https://mail.google.
   :END:
 
   <2018-08-24 Fri 11:00-12:00>
+* Pull data for valiant
+  :PROPERTIES:
+  :LINK: [[https://www.google.com/calendar/event?eid=cG90dTNxNXRkaG00NDljMWo3N2s2ODExZDRfMjAxODA4MzBUMTkwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
+  :ID: potu3q5tdhm449c1j77k6811d4_20180830T190000Z
+  :END:
+
+  <2018-08-30 Thu 14:00-15:00>
+* Plano
+  :PROPERTIES:
+  :LINK: [[https://www.google.com/calendar/event?eid=bWs5YzVtYzFuYjFkOGZ0Zm1tYjlxMW9uZzggc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
+  :ID: mk9c5mc1nb1d8ftfmmb9q1ong8
+  :END:
+
+  <2018-09-01 Sat>--<2018-09-03 Mon>
+* Marketing strategy and review
+  :PROPERTIES:
+  :LINK: [[https://www.google.com/calendar/event?eid=bWtzMWxycjh0ZHZtOTA1Ym5nOWc4djRuZW9fMjAxODA5MDdUMTYwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
+  :ID: mks1lrr8tdvm905bng9g8v4neo_20180907T160000Z
+  :END:
+
+  <2018-09-07 Fri 11:00-12:00>
+* Charity
+  :PROPERTIES:
+  :LINK: [[https://www.google.com/calendar/event?eid=Mzh0cTEwaThhNzI3cmxxNWxxcXJyYmpvaG9fMjAxODA5MDkgc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
+  :ID: 38tq10i8a727rlq5lqqrrbjoho_20180909
+  :END:
+
+  <2018-09-09 Sun>
